# fuzzy-alpaca

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.claude/: conventions.md  settings.json
apps/orchestrator/: Dockerfile  README.md  pyproject.toml
apps/orchestrator/scripts/: agent_verify.py  alphas_gtja.py  backtest.py  mcp_verify.py  overlay.py  portfolio.py  sweep.py  volpremium.py
apps/orchestrator/src/orchestrator/: main.py
apps/orchestrator/src/orchestrator/application/: agent_ports.py  alphas.py  backtest.py  cross_sectional.py  gate.py  metrics.py  ports.py  react.py  regime.py  research.py  risk.py  signals.py  sizing.py  trade.py  walkforward.py
apps/orchestrator/src/orchestrator/domain/: agent.py  backtest.py  gate.py  ids.py  models.py  strategy.py
apps/orchestrator/src/orchestrator/infrastructure/: activities.py  backtests_repo.py  bars.py  config.py  db.py  deepseek.py  gateway.py  journal.py  macro.py  mcp_registry.py  proposals.py  state.py  strategy_workflow.py  workflow.py
apps/orchestrator/src/orchestrator/presentation/: agent_app.py  app.py  mcp_server.py  mcp_tools.py
apps/orchestrator/tests/: test_alphas.py  test_backtest.py  test_cross_sectional.py  test_ids.py  test_mcp_tools.py  test_portfolio.py  test_react.py  test_regime.py  test_risk.py  test_signals.py  test_sizing.py  test_trade.py  test_walkforward_gate.py
dapr/: appconfig.yaml  cron.yaml  statestore.yaml
docs/: architecture.md  experiments.md  integration-with-h.md  (+2 more)
(+94 files in other folders)
