[project]
name = "orchestrator"
version = "0.1.0"
description = "fuzzy-alpaca trading orchestrator — Dapr Workflows (functional, pragmatic hex)"
requires-python = ">=3.12"
dependencies = [
    "dapr>=1.15.0",
    "dapr-ext-workflow>=1.15.0",
    "dapr-ext-fastapi>=1.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "returns>=0.24.0",
    "asyncpg>=0.30.0",
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "returns[compatible-mypy]>=0.24.0",
    "asyncpg-stubs>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]
mypy_path = "src"
